<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp">

        <TextView
            android:id="@+id/textViewItem_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:padding="4dp"
            android:gravity="center"
            android:background="@color/gray_light"
            android:text="@string/nombre_fuente"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="4dp"
            android:gravity="left"
            android:background="@color/white"
            android:text="@string/resultado_nivel_riesgo"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/tv_item_riesgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/teal_700"
            android:text="@string/muy_alto_mayusculas"
            android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="4dp"
                android:background="@color/white"
                android:text="@string/exp_material_particulado"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_item_exp_material_particulado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/white"
                android:text="@string/muy_alto_mayusculas"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="4dp"
                android:background="@color/white"
                android:text="@string/control_de_polvo_fugitivo"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_item_control_polvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/white"
                android:text="@string/nivel_1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/icon_0"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_arrow_right"
                android:contentDescription="@string/description"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginStart="7dp"
                    android:text="@string/puntaje_de_riesgo_de_polvo"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:background="@color/white"
                        android:text="@string/resultado" />
                    <TextView
                        android:id="@+id/tv_resul_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:text="@string/_0_0" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@color/white"
                        android:text="@string/nivel"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/tv_level_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:gravity="center"
                        android:visibility="gone"
                        android:background="@color/white"
                        android:text="@string/muy_alto_mayusculas" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_arrow_right"
                android:contentDescription="@string/description"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:background="@color/white"
                    android:text="@string/puntaje_riesgo_de_polvo_y_medido"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:background="@color/white"
                        android:text="@string/resultado" />

                    <TextView
                        android:id="@+id/tv_resul_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/_0_0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@color/white"
                        android:text="@string/nivel"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/tv_level_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/muy_alto_mayusculas" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/icon_2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_arrow_right"
                android:contentDescription="@string/description"
                tools:ignore="VectorDrawableCompat"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginStart="7dp"
                    android:text="@string/puntaje_riesgo_del_derrame"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:background="@color/white"
                        android:text="@string/resultado" />
                    <TextView
                        android:id="@+id/tv_resul_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:text="@string/_0_0" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@color/white"
                        android:text="@string/nivel"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/tv_level_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:gravity="center"
                        android:background="@color/white"
                        android:visibility="gone"
                        android:text="@string/muy_alto_mayusculas" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="7dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/opciones_de_control"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_opciones_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="left"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:text="@string/_20"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_opc_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/ingenier_a_de_contencion" />
        <TextView
            android:id="@+id/tv_opc_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/ingenieria_de_recoleccion_de_polvo" />
        <TextView
            android:id="@+id/tv_opc_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/ingenieria_de_limpieza_de_banda" />
        <TextView
            android:id="@+id/tv_opc_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/cabinas" />
        <TextView
            android:id="@+id/tv_opc_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/tareas_de_trabajo" />
        <TextView
            android:id="@+id/tv_opc_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:background="@color/white"
            android:text="@string/_administrativo" />
        <TextView
            android:id="@+id/tv_opc_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textStyle="italic"
            android:layout_marginBottom="7dp"
            android:background="@color/white"
            android:text="@string/_epp_respiratorio" />

    </LinearLayout>

</androidx.cardview.widget.CardView>